--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -84,12 +84,20 @@
 			<version>${jsf.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>javax.servlet.jsp.jstl</groupId> <artifactId>javax.servlet.jsp.jstl-api</artifactId>
-			<version>1.2.1</version> </dependency> <dependency> <groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId> <version>2.5</version> </dependency>
-			<dependency> <groupId>javax.servlet.jsp</groupId> <artifactId>jsp-api</artifactId>
-			<version>2.1</version> </dependency> -->
+		<!-- IText -->
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
 
+
+		<!-- POI -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.14</version>
+		</dependency>
 
 		<!-- Spring -->
 		<dependency>
@@ -165,12 +173,12 @@
 			<version>${jersey.version}</version>
 		</dependency>
 
-<!-- Apache Commons BeanUtils -->
-<dependency>
-	<groupId>commons-beanutils</groupId>
-	<artifactId>commons-beanutils</artifactId>
-	<version>1.9.2</version>
-</dependency>
+		<!-- Apache Commons BeanUtils -->
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 
 
 
