--- a/collections-mongodb-api/pom.xml
+++ b/collections-mongodb-api/pom.xml
@@ -4,12 +4,28 @@
 	<groupId>com.jsilgado.core</groupId>
 	<artifactId>collections-mongodb-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<properties>
 		<spring.version>4.2.4.RELEASE</spring.version>
 		<jersey2.version>2.22.2</jersey2.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<build>
+		<finalName>collections-mongodb-api</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<repositories>
         <repository>
@@ -87,19 +103,5 @@
 		</dependency>
 
 	</dependencies>
-
-
-	<build>
-		<finalName>collections-mongodb-api</finalName>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
