--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -1,15 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+	<!-- =================================================================== -->
+	<!-- PROYECT -->
+	<!-- =================================================================== -->
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jsilgado.core</groupId>
 	<artifactId>collections</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
+	<!-- =================================================================== -->
+	<!-- PROPERTIES -->
+	<!-- =================================================================== -->
 	<properties>
 		<spring.version>4.2.4.RELEASE</spring.version>
 		<springwebflow.version>2.4.2.RELEASE</springwebflow.version>
+		<springsecurity.version>3.0.2.RELEASE</springsecurity.version>
 		<primefaces.version>5.3</primefaces.version>
 		<jsf.version>2.2.13</jsf.version>
 		<jersey.version>2.22.2</jersey.version>
@@ -17,22 +24,15 @@
 		<!-- Version Time -->
 		<mvn.timestamp>${maven.build.timestamp}</mvn.timestamp>
 		<maven.build.timestamp.format>yyyy/MM/dd</maven.build.timestamp.format>
+		<rest.urlRest>http://localhost:8085/collections-mongodb-api/rest/json</rest.urlRest>
 	</properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
+
+
+	<!-- =================================================================== -->
+	<!-- REPOSITORIES -->
+	<!-- =================================================================== -->
 	<repositories>
 		<repository>
 			<id>prime-repo</id>
@@ -42,6 +42,9 @@
 		</repository>
 	</repositories>
 
+	<!-- =============================================================== -->
+	<!-- DEPENDENCIES -->
+	<!-- =============================================================== -->
 	<dependencies>
 
 		<!-- PrimeFaces -->
@@ -148,6 +151,17 @@
 			<version>${springwebflow.version}</version>
 		</dependency>
 
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
 
 
 		<!-- Jersey -->
@@ -180,11 +194,6 @@
 			<version>1.9.2</version>
 		</dependency>
 
-
-
-		<!-- <dependency> <groupId>org.apache.derby</groupId> <artifactId>derby</artifactId>
-			<version>10.12.1.1</version> </dependency> -->
-
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -193,10 +202,69 @@
 			<scope>test</scope>
 		</dependency>
 
-
 	</dependencies>
 
+	<!-- =================================================================== -->
+	<!-- BUILD -->
+	<!-- =================================================================== -->
+	<build>
+		<finalName>collections</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
+	<!-- =================================================================== -->
+	<!-- PROFILES -->
+	<!-- =================================================================== -->
+	<profiles>
+		<profile>
+			<id>war</id>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>false</filtering>
+					</resource>
+					<resource>
+						<directory>src/main/filter/resources</directory>
+						<filtering>true</filtering>
+					</resource>
+				</resources>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.6</version>
+						<configuration>
+							<webResources>
+								<resource>
+									<directory>src/main/filter/webresources</directory>
+									<filtering>true</filtering>
+								</resource>
+							</webResources>
+							<warName>${rp.build.warname}</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 
+		<profile>
+			<id>pro</id>
+			<properties>
+				<rest.urlRest>http://jsilgado.ddns.net:8080/collections-mongodb-api/rest/json</rest.urlRest>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
