--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>5.3</version>
+			<version>6.0.RC1</version>
 		</dependency>
 
 		<dependency>
